[package]
authors = ["CarlosEduardoL"]
name = "r8"
version = "0.1.0"
edition = "2021"
description = "Simple Chip8 emulator"

[dependencies]
simple-logging = "2.0.2"
log = "0.4"
egui = { version = "0.23.0", optional = true }
rfd = { version = "0.12.0", optional = true }
clap = { version = "4.4.8", features = ["derive"], optional = true }
crossterm = {version = "0.27.0", optional = true}

[target.'cfg(unix)'.dependencies]
sdl2 = { version = "0.35.2", optional = true }
egui_sdl2_gl = { version = "0.23", optional = true }

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.35.2", features = ["bundled"], optional = true }
egui_sdl2_gl = { version = "0.23", features = ["sdl2_bundled"], optional = true }

[features]
sdl2-gui = ["sdl2", "egui_sdl2_gl", "egui", "rfd"]
tui-gui = ["clap", "crossterm"]

[lib]
name = "r8"
path = "src/emulator/lib.rs"

[[bin]]
name = "r8-sdl2"
path = "src/sdl2-gui/main.rs"
required-features = ["sdl2-gui"]

[[bin]]
name = "r8-tui"
path = "src/tui/main.rs"
required-features = ["tui-gui"]

# [profile.release]
# lto = true
