[package]
authors = ["CarlosEduardoL"]
name = "r8"
version = "0.2.0"
edition = "2021"
description = "Simple Chip8 emulator"

[dependencies]
simple-logging = "2.0.2"
log = "0.4"
clap = { version = "4.4.8", features = ["derive"], optional = true }
crossterm = {version = "0.27.0", optional = true}
bevy = { version = "0.13.0", features = ["dynamic_linking"], optional = true }
#bevy_file_dialog = {version = "0.5.0", optional = true}
bevy_file_dialog = { version = "0.5.0", default-features = false, features = ["gtk3"], optional = true }
bevy_egui = { version = "0.27.1", optional = true}

[features]
gui = ["bevy", "bevy_file_dialog", "bevy_egui"]
tui = ["clap", "crossterm"]

[lib]
name = "r8"
path = "src/emulator/lib.rs"

[[bin]]
name = "gui"
path = "src/gui/main.rs"
required-features = ["gui"]

[[bin]]
name = "tui"
path = "src/tui/main.rs"
required-features = ["tui"]

# [profile.release]
# lto = true

[profile.dev]
opt-level = 1
[profile.dev.package.'*']
opt-level = 3
