[workspace]
members = [
    "r8-core",
    "r8-emulator",
    "r8-assembly",
    "r8-gui",
    "r8-tui",
]

# Use the newer Cargo resolver for better feature resolution across the workspace
resolver = "3"

# Common metadata that member crates can inherit
[workspace.package]
edition = "2024"
authors = ["CarlosEduardoL"]
license = "MIT"
publish = false

# Optional: keep certain common dev profiles for the workspace (applies to all members)
[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3
