[package]
name = "r8-tui"
version = "0.1.0"
edition = "2021"
authors = ["CarlosEduardoL"]
description = "Text-based UI (TUI) for the R8 CHIP-8 emulator"
license = "MIT"
publish = false

[dependencies]
r8-core = { path = "../r8-core" }
r8-emulator = { path = "../r8-emulator" }
r8-assembly = { path = "../r8-assembly" }
log = "0.4"
simple-logging = "2.0.2"
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.29.0"

[dev-dependencies]
# Add dev-only dependencies here if needed.

[[bin]]
name = "tui"
path = "src/main.rs"
